; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_direct.c_nilfs_direct_set_target_v.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_direct.c_nilfs_direct_set_target_v.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nilfs_direct = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nilfs_direct*, i8*, i8*)* @nilfs_direct_set_target_v to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nilfs_direct_set_target_v(%struct.nilfs_direct* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.nilfs_direct*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.nilfs_direct* %0, %struct.nilfs_direct** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = load %struct.nilfs_direct*, %struct.nilfs_direct** %4, align 8
  %9 = getelementptr inbounds %struct.nilfs_direct, %struct.nilfs_direct* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  store i8* %7, i8** %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load %struct.nilfs_direct*, %struct.nilfs_direct** %4, align 8
  %13 = getelementptr inbounds %struct.nilfs_direct, %struct.nilfs_direct* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i8* %11, i8** %14, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
